--- a/android/Finder/app/src/main/AndroidManifest.xml
+++ b/android/Finder/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".Activities.WorkerActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".Activities.PeopleActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
