--- a/android/Finder/app/src/main/AndroidManifest.xml
+++ b/android/Finder/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <!--Needed for bluetooth device discovery-->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -32,6 +33,19 @@
         <activity
             android:name=".Activities.PeopleActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Activities.ServerActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/APP_ID"/>
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="your new activity name" >
         </activity>
     </application>
 
