--- a/android/Finder/app/src/main/AndroidManifest.xml
+++ b/android/Finder/app/src/main/AndroidManifest.xml
@@ -40,12 +40,10 @@
         </activity>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/APP_ID"/>
+        <meta-data android:name="com.facebook.sdk.ApplicationName" android:value="@string/app_name"/>
         <activity
             android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="your new activity name" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
