--- a/android/Finder/app/build.gradle
+++ b/android/Finder/app/build.gradle
@@ -25,4 +25,18 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:support-v4:21.0.0'
+    compile files('libs/jackson-annotations-2.5.1.jar')
+    compile files('libs/jackson-core-2.5.1.jar')
+    compile files('libs/jackson-databind-2.5.1.jar')
+}
+
+android {
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+    // ...
 }
